feat: :sparkles: blended-01

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
       <ol class="list js-list"></ol>
     </div>
     <script type="module" src="/main.js"></script>
+    <!-- <script type="module" src="/promises.js"></script> -->
   </body>
 </html>
